--- a/Web/css/index.css
+++ b/Web/css/index.css
@@ -20,8 +20,8 @@ html {
 
 /* ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲  */
 .card {
-  opacity: 0;
-  transition: opacity 0;
+  opacity: 0.9;
+  transition: opacity .3s;
 }
 
 .card:hover {
