--- a/Web/css/index.css
+++ b/Web/css/index.css
@@ -21,7 +21,7 @@ html {
 /* ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲  */
 .card {
   opacity: 0;
-  transition: opacity .3s;
+  transition: opacity 0;
 }
 
 .card:hover {
